--- a/views/customer/show.ejs
+++ b/views/customer/show.ejs
@@ -1,8 +1,8 @@
-<h1><%= customer.name %></h1>
+<h1><%= Customer %></h1>
 <hr>
-<div class="container-fluid">
-  <h3>Address: <%= customer.street_address %></h3>
-  <h4><%= customer.city + ', ' + customer.state + '  ' + customer.zip %></h4>
+<div class="Customer">
+ <!-- <h3>Address: <%= customer.street_address %></h3>
+ <!-- <h4><%= customer.city + ', ' + customer.state + '  ' + customer.zip %></h4>
   <h5><%= 'Email: ' + customer.email %></h5>
   <h5><%= 'Cell: ' + customer.cellphone %></h5>
   <h5><%= 'Home: ' + customer.home_phone %></h5>
@@ -16,20 +16,19 @@
 <br><br>
 
 <!--Stock-->
-<div class="container-fluid">
+<div class="Customer Information">
   <h3>Stock</h3>
-  <table class="table table-striped">
+  <table class="table">
     <tr>
-      <th class="span1">Symbol</th>
-      <th class="span2">Number of Shares</th>
-      <th class="span2">Current Price</th>
-      <th class="span3">Owned Value Change</th>
-      <th class="span2">Initial Price</th>
-      <th class="span1"></th>
-      <th class="span1"></th>
+      <th class="name">Name</th>
+      <th class="agegroup">Age</th>
+      <th class="gender">Gender</th>
+      <th class="email">Email</th>
+      <th class="tier">Tier</th>
+      <th class="tripID">Trip ID Number</th>
     </tr>
-    <% _.each(customer.stocks, function(stock) { %>
-    <tr data-id="<%= stock.id %>" data-model="stock">
+
+    <tr data-id="<%= trip.id %>" data-model="stock">
       <td align="center"><%= stock.symbol %></td>
       <td align="center"><%= stock.number_of_shares %></td>
       <td align="center">$<%= stock.current_price %></td>
