--- a/views/customer/new.ejs
+++ b/views/customer/new.ejs
@@ -1,10 +1,8 @@
-<h2>Nice</h2>
-
 <form action="/customer/create" method="POST" >
   <h2>Create a Customer</h2>
 
   <input type="text" placeholder="Name" name="name" ><br />
   <input type="text" placeholder="Email" name="email" ><br />
   <input type="text" placeholder="Budget Tier" name="tier" ><br />
-  <input class="btn btn-success" type="submit" value="Create Customer" />
+  <input type="submit" value="Create Customer" />
 </form>
