--- a/views/trip/new.ejs
+++ b/views/trip/new.ejs
@@ -1,10 +1,9 @@
-<h2>Nice</h2>
-
 <form action="/trip/create" method="POST" >
-  <h2>Create a Customer</h2>
+  <h2>Plan a Trip</h2>
 
   <input type="text" placeholder="Departure Date" name="departureDate" ><br />
   <input type="text" placeholder="Destination" name="destination" ><br />
   <input type="text" placeholder="Date to Return" name="returnDate" ><br />
-  <input class="btn btn-success" type="submit" value="Create Customer" />
+  <input type="text" placeholder="Customer Number" name="owner" ><br />
+  <input class="btn btn-success" type="submit" value="Create New Trip" />
 </form>
