Customer and Trip-- View Edits
Brent Mac 5pm

--- a/views/customer/index.ejs
+++ b/views/customer/index.ejs
@@ -20,7 +20,7 @@
     <td><a href="/customer/show/<%= customer.id %>">Customer Summary</a></td>
     <td><a href="/customer/edit/<%= customer.id %>">Edit</a></td>
     <td><a href="/customer/destroy/<%= customer.id %>">Delete</a></td>
-    <td><a style="color:orangered;" href="/customer/<%= customer.id %>">JSON View</a></td>
+    <td><a style="color:#1ab228;" href="/customer/<%= customer.id %>">JSON View</a></td>
   </tr>
 <% }) %>
 </table>
