--- a/views/trip/new.ejs
+++ b/views/trip/new.ejs
@@ -2,8 +2,9 @@
   <h2>Plan a Trip</h2>
 
   <input type="text" placeholder="Departure Date" name="departureDate" ><br />
-  <input type="text" placeholder="Destination" name="destination" ><br />
   <input type="text" placeholder="Date to Return" name="returnDate" ><br />
-  <input type="text" placeholder="Customer Number" name="owner" ><br />
+  <input type="text" placeholder="Origin" name="origin" ><br />
+  <input type="text" placeholder="Destination" name="destination" ><br />
+  <input type="text" placeholder="Customer ID Number" name="owner" ><br />
   <input class="btn btn-success" type="submit" value="Create New Trip" />
 </form>
