--- a/views/customer/show.ejs
+++ b/views/customer/show.ejs
@@ -1,12 +1,25 @@
 <h1>Customer</h1>
 
-<h3>Trips</h3>
+<h1><%= customer.name %></h1>
+<hr>
+<h3><u>Tier:</u></br> </h3>
+<h4><%= customer.tier %></h4>
+<h3><u>Contact Information:</u></h3>
+<h4>Email: <%=customer.email%></h4>
+
+<form action="/customer/edit/<%= customer.id %>" method="POST">
+  <input type="hidden" value="<%= customer.id %>" name="owner" />
+  <input type="hidden" value="<%= customer.name %>" name="name" />
+  <input type="submit" value="Edit Customer" />
+</form>
+
+<h3>Trip Information</h3>
 <table class="table table-striped">
   <tr>
     <th>Date of Departure</th>
     <th>Date of Return</th>
-    <th>Destination</th>
     <th>Origin</th>
+    <th>Destination</th>
     <th></th>
     <th></th>
   </tr>
@@ -14,8 +27,8 @@
   <tr data-id="<%= trip.id %>" data-model="trip">
     <td align="center"><%= trip.departureDate %></td>
     <td align="center"><%= trip.returnDate %></td>
-    <td align="center"><%= trip.destination %></td>
     <td align="center"><%= trip.origin %></td>
+    <td align="center"><%= trip.destination %></td>
     <td>
       <a class="btn btn-info" href="/trip/edit/<%= trip.id %>">Edit</a>
     </td>
@@ -25,3 +38,9 @@
   </tr>
   <% }); %>
 </table>
+
+<form action="/trip/new" method="POST">
+  <input type="hidden" value="<%= customer.id %>" name="owner" />
+  <input type="hidden" value="<%= customer.name %>" name="name" />
+  <input type="submit" value="Add Trip" />
+</form>
