--- a/views/customer/index.ejs
+++ b/views/customer/index.ejs
@@ -24,4 +24,4 @@
   </tr>
 <% }) %>
 </table>
-  <div> <br> <p> <a href="customer/new"> Create New Customer </a></p> </div>
+  <div> <br> <p> <a href="/customer/new"> Create New Customer </a></p> </div>
