--- a/views/customer/show.ejs
+++ b/views/customer/show.ejs
@@ -44,3 +44,5 @@
   <input type="hidden" value="<%= customer.name %>" name="name" />
   <input type="submit" value="Add Trip" />
 </form>
+
+<a class="btn btn-info" href="/customer/">All Customers</a>
