--- a/views/trip/new.ejs
+++ b/views/trip/new.ejs
@@ -5,9 +5,7 @@
   <input type="text" placeholder="Date to Return" name="returnDate" ><br />
   <input type="text" placeholder="Origin" name="origin" ><br />
   <input type="text" placeholder="Destination" name="destination" ><br />
-
-  <!--Button to send API request?-->
-
   <input type="text" placeholder="Customer ID Number" name="owner" ><br />
-  <input class="btn btn-success" type="submit" value="Create New Trip" />
+  <h3>Continue to Flight</h3>
+  <input class="btn btn-success" type="submit" value="Next" />
 </form>
