--- a/views/trip/flight.ejs
+++ b/views/trip/flight.ejs
@@ -1,1 +1,8 @@
-<h2>Flight page</h2>
+<h2>Select a suggested flight:</h2>
+<form action="/trip/flight" method="POST" >
+
+  <input type="text" placeholder="Flight Number" name="flightNum" ><br />
+
+  <h3>Continue to Hotel</h3>
+  <input class="btn btn-success" type="submit" value="Next" />
+</form>
