--- a/views/trip/new.ejs
+++ b/views/trip/new.ejs
@@ -1,8 +1,8 @@
 <form action="/trip/create" method="POST" >
   <h2>Plan a Trip</h2>
 
-  <input type="text" placeholder="Departure Date" name="departureDate" ><br />
-  <input type="text" placeholder="Date to Return" name="returnDate" ><br />
+  <input type="text" placeholder="Departure Date (mm/dd/yyyy)" name="departureDate" ><br />
+  <input type="text" placeholder="Date to Return (mm/dd/yyyy)" name="returnDate" ><br />
   <input type="text" placeholder="Origin" name="origin" ><br />
   <input type="text" placeholder="Destination" name="destination" ><br />
   <input type="text" placeholder="Customer ID Number" name="owner" ><br />
