--- a/views/customer/edit.ejs
+++ b/views/customer/edit.ejs
@@ -1,4 +1,4 @@
- <h3> <a href="/../">Sails Travel Homepage</a> </div> </h3>
+ <h3> <a href="/../"> Sails Travel Guide Homepage </a> </div> </h3>
 
 <form action="/customer/update/<%= customer.id %>" method="POST" >
   <h2>Edit a Customer</h2>
