CSS Edit/Revision

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -11,5 +11,7 @@
 <center><img  align="middle" src="http://i1077.photobucket.com/albums/w466/brentmac94/Sails%20Travel%20Guide%20Dark_zpsscq9ggxg.png" border="0" alt=" photo Logo_zps5iyjczue.png" width="900" height="600" alt="Logos"> </center>
 
 
+<!-- CSS Edit/Revision --->
+
 
 
