Larger Homepage Links
Sorry for all the commits

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,6 +1,6 @@
 <br>
 <br>
-<center> <a href="/customer/new"> New Customer </a>        |     <a href="/customer"> All Customers </a>      |      <a href="/trip/new"> Create New Trip </a> </center>
+<center> <h4> <a href="/customer/new"> New Customer </a>        |     <a href="/customer"> All Customers </a>      |      <a href="/trip/new"> Create New Trip </a> </h4> </center>
 
 <br>
 <br>
