--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,6 +30,7 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/Master Travel CSS.css">
+    <link rel="stylesheet" href="/styles/Master.css">
     <link rel="stylesheet" href="/styles/bootstrap.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
