--- a/assets/styles/bootstrap.css
+++ b/assets/styles/bootstrap.css
@@ -227,13 +227,13 @@ body {
   font-size: 14px;
   line-height: 20px;
   color: #0b7ba4;
-  background-color: rgb(240, 232, 187);
+  background-color: rgb(241, 251, 221);
   padding-right: 30px;
   padding-left: 30px;
 }
 
 a {
-  color: #0088cc;
+  color: #8c665a;
   text-decoration: none;
 }
 
