--- a/views/trip/new.ejs
+++ b/views/trip/new.ejs
@@ -2,8 +2,8 @@
   <h2>Plan a Trip</h2>
 
   <input type="text" placeholder="Departure Date (mm/dd/yyyy)" name="departureDate" ><br />
-  <input type="text" placeholder="Origin" name="origin" ><br />
-  <input type="text" placeholder="Destination" name="destination" ><br />
+  <input type="text" placeholder="Origin Airport Code" name="origin" ><br />
+  <input type="text" placeholder="Destination Airport Code" name="destination" ><br />
   <input type="text" placeholder="Customer ID Number" name="owner" ><br />
   <h3>Continue to Flight</h3>
   <input class="btn btn-success" type="submit" value="Next" />
