--- a/views/trip/new.ejs
+++ b/views/trip/new.ejs
@@ -5,6 +5,6 @@
   <input type="text" placeholder="Origin Airport Code" name="origin" ><br />
   <input type="text" placeholder="Destination Airport Code" name="destination" ><br />
   <input type="text" placeholder="Customer ID Number" name="owner" ><br />
-  <h3>Continue to Flight</h3>
-  <input class="btn btn-success" type="submit" value="Next" />
+  <h3>Save Trip</h3>
+  <input class="btn btn-success" type="submit" value="Save" />
 </form>
