--- a/views/trip/show.ejs
+++ b/views/trip/show.ejs
@@ -1,3 +1,5 @@
 <%= trip.origin %>
 
-<td><a href="/flight/new/<%= trip.id %>">Flights</a></td>
+<td><a class="btn btn-success" href="/flight/search/<%= trip.id %>">Flights</a></td>
+
+<h4>more options coming soon..</h4>
