--- a/views/trip/show.ejs
+++ b/views/trip/show.ejs
@@ -1,5 +1,6 @@
-<%= trip.origin %>
-
+<%= trip.owner.name %>
+<br><br>
 <td><a class="btn btn-success" href="/flight/search/<%= trip.id %>">Flights</a></td>
+<td><a class="btn btn-success" href="/ride/search/<%= trip.id %>">Rides</a></td>
 
 <h4>more options coming soon..</h4>
