--- a/views/ride/search.ejs
+++ b/views/ride/search.ejs
@@ -1,32 +1,29 @@
 <!--Give each row its own form (POST method)-->
-<h1>Yo, choose a flight!</h1>
+<h1>Yo, choose a ride!</h1>
+<h4><%= trip.id %></h4>
+<form action="/flight/create" method="POST">
+  <div class="container-fluid">
+    <table class="table table-striped">
+      <tr>
+        <th>Flight Number</th>
+        <th>Carrier</th>
+        <th>Arrival Time</th>
+        <th></th>
+        <th></th>
+      </tr>
+      <!--cycles through each flight object in "scheduledFlights" array-->
+      <% _.each(flight.scheduledFlights, function(particularFlight) { %>
+      <!--e.g. particularFlight.flightNumber-->
+      <!--Give each row its own form (POST method)-->
+      <tr>
+        <td><input type="text" placeholder="<%= particularFlight.flightNumber %>" name="num"></td>
+        <td><input type="text" placeholder="<%= particularFlight.carrierFsCode %>" name="carrier"></td>
+        <td><input type="text" placeholder="<%= particularFlight.arrivalTime %>" name="arrival"><td>
+        <td><input type="text" placeholder="<%= trip.id %>" name="owner"></td>
+        <td><input class="btn btn-success" type="submit" value="Select"/></td>
+      </tr>
+      <% }); %>
+    </table>
+  </div>
+</form>
 
-<div class="container-fluid">
-  <h3>Investments</h3>
-  <table class="table table-striped">
-    <tr>
-      <th>Flight Number</th>
-      <th>Carrier</th>
-      <th>Change in Value</th>
-    </tr>
-    <!--cycles through each flight object in "scheduledFlights" array-->
-    <% _.each(flight.scheduledFlights, function(particularFlight) { %>
-    <!--table with form rows-->
-    <!--e.g. particularFlight.flightNumber-->
-    <tr data-id="<%= investment.id %>" data-model="investment">
-      <% if (investment.rec_value == null) {
-        investment.rec_value = investment.inv_value
-      } %>
-      <td align="center"><%= particularFlight.flightNumber %></td>
-      <td align="center">$<%= particularFlight.carrierFsCode %></td>
-      <td align="center">$<%= particularFlight.arrivalTime %></td>
-      <!--<td>
-        <a class="btn btn-info" href="/investment/edit/<%= investment.id %>">Edit</a>
-      </td>
-      <td>
-        <a class="btn btn-danger" href="/investment/destroy/<%= investment.id %>">Delete</a>
-      </td>-->
-    </tr>
-    <% }); %>
-  </table>
-</div>
