--- a/views/flight/search.ejs
+++ b/views/flight/search.ejs
@@ -15,9 +15,9 @@
       <!--e.g. particularFlight.flightNumber-->
       <!--Give each row its own form (POST method)-->
       <tr>
-        <td><input type="text" placeholder="<%= particularFlight.flightNumber %>" name="num"></td>
-        <td><input type="text" placeholder="<%= particularFlight.carrierFsCode %>" name="carrier"></td>
-        <td><input type="text" placeholder="<%= particularFlight.arrivalTime %>" name="arrival"></td>
+        <td><input type="text" value="<%= particularFlight.flightNumber %>" name="num"></td>
+        <td><input type="text" value="<%= particularFlight.carrierFsCode %>" name="carrier"></td>
+        <td><input type="text" value="<%= particularFlight.arrivalTime %>" name="arrival"></td>
         <td><input type="hidden" name="owner" value="<%= trip.id %>"></td>
         <td><input class="btn btn-success" type="submit" value="Select"/></td>
       </tr>
