Working Hotel API
Need to pass the right objects into params

--- a/views/flight/search.ejs
+++ b/views/flight/search.ejs
@@ -11,6 +11,7 @@
         <th></th>
       </tr>
       <!--cycles through each flight object in "scheduledFlights" array-->
+      <!-- _.each(hotels, function(hotel) {
       <% _.each(flight.scheduledFlights, function(particularFlight) { %>
       <!--e.g. particularFlight.flightNumber-->
       <!--Give each row its own form (POST method)-->
