..with Flying Colors.
-Flight functionality complete
-Hotel API using flight's data
-arrival date from flight being parsed
-Hotel/show(search) nearly complete
-npm hotwire install

--- a/views/hotel/show.ejs
+++ b/views/hotel/show.ejs
@@ -1,26 +1,29 @@
-
+<!--Could put something here using 'headline' in JSON object-->
 
 <table>
-
   <tr>
     <th>Price</th>
     <th>Hotel City</th>
-    <th> Neighborhood </th>
+    <th>Neighborhood</th>
     <th>Start Date</th>
     <th>End Date</th>
     <th>Star Rating</th>
-
-
   </tr>
   <% _.each(hotels, function(hotel) { %>
+  <!--price and refNum will hold lat/long, respectively-->
   <tr>
-    <td><%= hotel.Price %></td>
-    <td><%= hotel.City %></td>
-    <td><%= hotel.Neighborhood %> </td>
-    <td><%= hotel.StartDate %></td>
-    <td><%= hotel.EndDate %> </td>
-    <td> <%= hotel.StarRating %></td>
+    <form action="/hotel/create" method="POST">
+      <td><%= hotel.Price %></td>
+      <td><%= hotel.City %></td>
+      <td><%= hotel.Neighborhood %></td>
+      <td><%= hotel.StartDate %></td>
+      <td><%= hotel.EndDate %></td>
+      <td><%= hotel.StarRating %></td>
+      <td><input type="hidden" name="price" value="<%= hotel.NeighborhoodLatitude %>"></td>
+      <td><input type="hidden" name="refNum" value="<%= hotel.NeighborhoodLatitude %>"></td>
+      <td><input type="hidden" name="owner" value="<%= trip.id %>"></td>
+      <td><input class="btn btn-success" type="submit" value="Select"/></td>
+    </form>
   </tr>
-
-<% }); %>
+  <% }); %>
 </table>
