--- a/views/trip/show.ejs
+++ b/views/trip/show.ejs
@@ -1,7 +1,7 @@
 <%= trip.owner.name %>
 <br><br>
 <td><a class="btn btn-success" href="/flight/search/<%= trip.id %>">Flights</a></td>
-<td><a class="btn btn-success" href="/hotel/search/<%= trip.id %>">Hotels</a></td>
+<td><a class="btn btn-success" href="/hotel/show/<%= trip.id %>">Hotels</a></td>
 <td><a class="btn btn-success" href="/ride/search/<%= trip.id %>">Rides</a></td>
 <td><a class="btn btn-success" href="/fun/search/<%= trip.id %>">Entertainment</a></td>
 
