--- a/views/flight/search.ejs
+++ b/views/flight/search.ejs
@@ -1,6 +1,6 @@
 <h1>Yo, choose a flight!</h1>
 <h4><%= trip.id %></h4>
-<form action="/flight/create" method="POST">
+
   <div class="container-fluid">
     <table class="table table-striped">
       <tr>
@@ -15,14 +15,14 @@
       <% _.each(flight.scheduledFlights, function(particularFlight) { %>
       <!--e.g. particularFlight.flightNumber-->
       <!--Give each row its own form (POST method)-->
-      <tr>
+      <tr><form action="/flight/create" method="POST">
         <td><input type="text" value="<%= particularFlight.flightNumber %>" name="num"></td>
         <td><input type="text" value="<%= particularFlight.carrierFsCode %>" name="carrier"></td>
         <td><input type="text" value="<%= particularFlight.arrivalTime %>" name="arrival"></td>
         <td><input type="hidden" name="owner" value="<%= trip.id %>"></td>
         <td><input class="btn btn-success" type="submit" value="Select"/></td>
-      </tr>
+        </form></tr>
       <% }); %>
     </table>
   </div>
-</form>
+
