Fly&Stay, but no Ride yet

--- a/views/trip/new.ejs
+++ b/views/trip/new.ejs
@@ -1,7 +1,7 @@
 <form action="/trip/create" method="POST" >
   <h2>Plan a Trip</h2>
 
-  <input type="text" placeholder="Departure Date (mm/dd/yyyy)" name="departureDate" ><br />
+  <input type="date" placeholder="Departure Date (mm/dd/yyyy)" name="departureDate" ><br />
   <input type="text" placeholder="Origin Airport Code" name="origin" ><br />
   <input type="text" placeholder="Destination Airport Code" name="destination" ><br />
   <input type="text" placeholder="Customer ID Number" name="owner" ><br />
