Added Ride API - Pls print to console

--- a/views/hotel/search.ejs
+++ b/views/hotel/search.ejs
@@ -1,4 +1,4 @@
-<!--Give each row its own form (POST method)-->
+1<!--Give each row its own form (POST method)-->
 <h1>Yo, choose a hotel!</h1>
 
 <div class="container-fluid">
