--- a/views/hotel/show.ejs
+++ b/views/hotel/show.ejs
@@ -1,6 +1,8 @@
 <!--Could put something here using 'headline' in JSON object-->
 
-<table>
+
+<table class="table table-striped">
+
   <tr>
     <th>Price</th>
     <th>Hotel City</th>
@@ -24,6 +26,7 @@
       <td><input type="hidden" name="owner" value="<%= trip.id %>"></td>
       <td><input class="btn btn-success" type="submit" value="Select"/></td>
     </form>
+
   </tr>
   <% }); %>
 </table>
