--- a/views/trip/show.ejs
+++ b/views/trip/show.ejs
@@ -1,5 +1,4 @@
-<%= trip.owner.name %>
-<br><br>
+<br>
 <h2>Please select each part of your trip in order.</h2>
 <br><br>
 <h3>Select a:</h3>
@@ -11,5 +10,6 @@
 <h3>..and of course some:</h3>
 <td><a class="btn btn-success" href="/fun/search/<%= trip.id %>">Entertainment</a></td>
 
-<br><br>
+<br><br><br>
+<h4>..or be boring and:</h4>
 <a class="btn btn-info" href="/customer/show/<%= trip.owner.id %>">Return to Customer</a>
