--- a/views/ride/search.ejs
+++ b/views/ride/search.ejs
@@ -5,9 +5,8 @@
   <div class="container-fluid">
     <table class="table table-striped">
       <tr>
-        <th>Flight Number</th>
-        <th>Carrier</th>
-        <th>Arrival Time</th>
+        <th>Estimated Cost</th>
+        <th>Duration</th>
         <th></th>
         <th></th>
       </tr>
@@ -16,8 +15,9 @@
       <!--e.g. particularFlight.flightNumber-->
       <!--Give each row its own form (POST method)-->
       <tr>
-        <td><input type="text" placeholder="<%= ride.estimate %>" name="estimate"></td>
-        <td><input type="text" placeholder="<%= ride.duration %>" name="duration"></td>
+        <td><input type="text" placeholder="<%= ride.estimate %>" name="costDist"></td>
+        <td><input type="text" placeholder="<%= ride.duration %>" name="capacity"></td>
+        <td><input type="hidden" value="<%= ride.low_estimate %>" name="costMin"></td>
         <td><input type="hidden" value="<%= trip.id %>" name="owner"></td>
         <td><input class="btn btn-success" type="submit" value="Select"/></td>
       </tr>
