--- a/views/trip/new.ejs
+++ b/views/trip/new.ejs
@@ -1,41 +1,28 @@
-<form action="/trip/create" method="POST" >
+<form action="/trip/create" method="POST">
   <h2>Plan a Trip</h2>
   <h3>Locations are direct flights from local Eppley Airfield.</h3>
 
-  <input type="date" placeholder="Departure Date (mm/dd/yyyy)" name="departureDate" ><br />
-  <input type="hidden" value=OMA name="origin" >
-  <input type="text" placeholder="Destination Airport Code" name="destination" ><br />
-  <input type="text" placeholder="Customer ID Number" name="owner" ><br />
+  <input type="date" placeholder="Departure Date (mm/dd/yyyy)" name="departureDate"><br/>
+  <input type="hidden" value=OMA name="origin">
+  <input type="text" placeholder="Destination Airport Code" name="destination"> Please select from below.<br/>
+  <input type="text" placeholder="Customer ID Number" name="owner"><br/>
   <h4>Save Trip</h4>
-  <input class="btn btn-success" type="submit" value="Save" />
+  <input class="btn btn-success" type="submit" value="Save"/>
 </form>
 
 <!--Doesn't need to be a form here; we're just displaying-->
-<h3>Currently available flights:</h3>
+<h3>Currently available destination aiports:</h3>
 
-<%= ports.response[0].arrival%>
-
-<!--<div class="container-fluid">
+<div class="container-fluid">
   <table class="table table-striped">
     <tr>
-      <th>Flight Number</th>
-      <th>Carrier</th>
-      <th>Arrival Time</th>
-      <th></th>
-      <th></th>
+      <th>IATA Airport Code</th>
     </tr>
-    <!--cycles through each flight object in "scheduledFlights" array-->
-    <!-- _.each(hotels, function(hotel) {
-      _.each(flight.scheduledFlights, function(particularFlight) {
-      <!--e.g. particularFlight.flightNumber-->
-    <!--Give each row its own form (POST method)
-    <tr><form action="/flight/create" method="POST">
-        <td><input type="text" value="= particularFlight.flightNumber " name="num"></td>
-        <td><input type="text" value="= particularFlight.carrierFsCode " name="carrier"></td>
-        <td><input type="text" value="= particularFlight.arrivalTime " name="arrival"></td>
-        <td><input type="hidden" name="owner" value="= trip.id "></td>
-        <td><input class="btn btn-success" type="submit" value="Select"/></td>
-      </form></tr>
-     });
+    <% _.each(ports.response, function(port) { %>
+    <tr>
+      <td><%= port.arrival %></td>
+    </tr>
+    <% }); %>
   </table>
-</div>-->
+</div>
+
