CSS master changes

--- a/views/customer/index.ejs
+++ b/views/customer/index.ejs
@@ -1,3 +1,6 @@
+<div style='float: right;'><img src="http://i1077.photobucket.com/albums/w466/brentmac94/Sails%20Travel%20Guide%20Dark_zpsscq9ggxg.png" border="0" alt=" photo Logo_zps5iyjczue.png" width="200" height="150" alt="Logos"></div>
+
+
 <h2>All Customers</h2>
 
 
