--- a/views/hotel/show.ejs
+++ b/views/hotel/show.ejs
@@ -1,5 +1,7 @@
 <!--Could put something here using 'headline' in JSON object-->
-<h1>Yo, choose a hotel!</h1>
+<center> <h4> <a href="/customer/new"> New Customer </a>        |     <a href="../../"> Homepage </a>      |      <a href="/trip/new"> Create New Trip </a> </h4> </center>
+
+<h1>Step 2: Select a hotel!</h1>
 
 <div class="container-fluid">
   <table class="table table-striped">
