--- a/views/ride/search.ejs
+++ b/views/ride/search.ejs
@@ -1,5 +1,6 @@
 <!--Give each row its own form (POST method)-->
-<h1>Yo, choose a ride!</h1>
+<center> <h4> <a href="/customer/new"> New Customer </a>        |     <a href="../../"> Homepage </a>      |      <a href="/trip/new"> Create New Trip </a> </h4> </center>
+<h1>Step 3:choose a ride!</h1>
 
 <form action="/ride/create" method="POST">
   <div class="container-fluid">
