--- a/views/flight/search.ejs
+++ b/views/flight/search.ejs
@@ -1,4 +1,5 @@
-<h1>Yo, choose a flight!</h1>
+<center> <h4> <a href="/customer/new"> New Customer </a>        |     <a href="../../"> Homepage </a>      |      <a href="/trip/new"> Create New Trip </a> </h4> </center>
+<h1>Step 1: Choose a flight!</h1>
 
   <div class="container-fluid">
     <table class="table table-striped">
