Add Trip info to trip show page

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -3,6 +3,9 @@
 <center> <h4> <a href="/customer/new"> New Customer </a>        |     <a href="/customer"> All Customers </a>      |      <a href="/trip/new"> Create New Trip </a> </h4> </center>
 
 <br>
+<h4><center>Welcome to the Omaha Travel Guide!</center></h4>
+<h5><center>As we trial our site, the cost of flight is on us! You will only need to cover hotel and rental car cost. <br>
+            Please navigate with the links above to plan your get-away!</center></h5>
 <br>
 <br>
 <br>
