--- a/views/ride/search.ejs
+++ b/views/ride/search.ejs
@@ -7,7 +7,7 @@
     <table class="table table-striped">
       <tr>
         <th>Estimated Cost</th>
-        <th>Duration</th>
+        <th>Duration (In Minutes)</th>
         <th></th>
         <th></th>
       </tr>
