--- a/views/trip/show.ejs
+++ b/views/trip/show.ejs
@@ -7,10 +7,51 @@
 <br><br>
 <h3>Select a:</h3>
 <td><a class="btn btn-success" href="/flight/search/<%= trip.id %>">Flight</a></td>
+<h4>Current Flight Selection</h4>
+<table border="2" rules="all" cellpadding="10">
+  <tr><th> Carrier </th>
+  <th>Flight Number</th>
+  <th>Arrival Time</th></tr>
+
+
+  <% _.each(trip.flights, function(flights) { %>
+ <tr>
+  <td> <%= flights.carrier%></td>
+  <td> <%= flights.num%></td>
+  <td> <%= flights.arrival%></td> </tr>
+  <% }); %> </table>
+
 <h3>..then a:</h3>
 <td><a class="btn btn-success" href="/hotel/show/<%= trip.id %>">Hotel</a></td>
+
+<h4>Current Hotel Selection</h4>
+<table border="2" rules="all" cellpadding="10">
+  <tr>
+    <th> Price Per Guest Per Night</th>
+  </tr>
+  <% _.each(trip.hotels, function(hotels) { %>
+  <tr>
+    <td><%= hotels.deal%> </td>
+  </tr>
+  <% }); %>
+</table>
+
 <h3>..and to get around town a...:</h3>
 <td><a class="btn btn-success" href="/ride/search/<%= trip.id %>">Ride</a></td>
+
+<h4>Current UBER Quote</h4>
+<table border="2" rules="all" cellpadding="10">
+  <tr>
+    <th> Estimated Per Day Price to travel 25 miles</th>
+  </tr>
+  <% _.each(trip.rides, function(rides) { %>
+  <tr>
+    <td>$ <%= rides.costMin%> </td>
+  </tr>
+  <% }); %>
+</table>
+
+
 
 
 <br><br><br>
